# CSE-532S-Lab1

./: .gitignore  ReadMe.txt  package.sh
lab1/: CMakeLists.txt  lab1.sln
lab1/common/: common.h
lab1/configs/: DUNCAN.txt  DUNCAN_with_blanks.txt  MALCOLM.txt  MALCOLM_with_blanks.txt  SOLDIER.txt  SOLDIER_with_blanks.txt  empty-but-one.txt  hamlet-34.txt  macbeth_act_i_scene_2.txt  macbeth_i_2_config.txt  macbeth_i_2_skipping_config.txt
lab1/lab1/: .ycm_extra_conf.py  Play.cpp  Play.h  Player.cpp  Player.h  lab1.vcxproj  lab1.vcxproj.filters  main.cpp
lab1/lab1_extra/: lab1_extra.vcxproj  lab1_extra.vcxproj.filters  main.cpp
old-codes/: Play.cpp  common.h  lab0_532.cpp  lab0_extra.cpp
